--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Graphics-ColorNames-WWW
-version:      0.01_0001
+version:      0.01
 version_from: WWW.pm
 installdirs:  site
 requires:
