--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,26 @@
 --- #YAML:1.0
-name:                Graphics-ColorNames-WWW
-version:             1.00
-abstract:            WWW color names and equivalent RGB values
-license:             ~
-author:              
-    - Claus Färber <CFAERBER@cpan.org>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Graphics::ColorNames:          0.32
+name:               Graphics-ColorNames-WWW
+version:            1.10
+abstract:           WWW color names and equivalent RGB values
+author:
+    - Claus Faerber <CFAERBER@cpan.org>
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    Test::More:        0
+    Test::NoWarnings:  0
+requires:
+    Graphics::ColorNames:  0.32
+resources:
+    homepage:    http://search.cpan.org/dist/Graphics-ColorNames-WWW
+    repository:  http://github.com/cfaerber/Graphics-ColorNames-WWW
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
